--- a/ansible/roles/deploy/tasks/main.yml
+++ b/ansible/roles/deploy/tasks/main.yml
@@ -20,14 +20,10 @@
     dest={{ project_path }} 
     accept_hostkey=yes
 
-- name: Create python package from git repo
-  shell: "python setup.py sdist" 
+- name: Install package
+  shell: "python setup.py install" 
   args: 
     chdir: "{{ project_path }}"
-
-- name: Install DynDD python module 
-  pip: 
-    name="{{ project_path }}/dist/dyndd-{{dyndd_version}}.tar.gz"
   become: true
 
 - name: Check if we need to install config 
