pep8-ified the code, except for the ipv6 regex...

--- a/config/dyndd.conf
+++ b/config/dyndd.conf
@@ -5,6 +5,7 @@ DBUser: dyndd
 DBPass: password 
 DBSchema: dyndd
 LogRotateTime: 86400
+LogLevel: debug
 QueryLog: /var/log/dyndd/query.log
 ApplicationLog: /var/log/dyndd/dyndd.log
 DefaultTTL: 5
